--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/router": "~12.0.0",
     "angular": "^1.8.2",
     "angular-routing": "^0.3.1",
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "routing": "0.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
