--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-routing": "^0.3.1",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
+    "ngx-mask": "^12.0.0",
     "popper.js": "^1.14.3",
     "routing": "0.0.2",
     "rxjs": "~6.6.0",
